# interview_assignment

./: .gitattributes  .gitignore  README.md
arithmetic_parser/: Cargo.toml  README.md
arithmetic_parser/src/: lib.rs
dao_chain/: Cargo.toml  README.md
dao_chain/pallets/pallet-dao/: Cargo.toml
dao_chain/pallets/pallet-dao/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
dao_chain/pallets/pallet-random/: Cargo.toml
dao_chain/pallets/pallet-random/src/: benchmarking.rs  lib.rs  weights.rs
dao_chain/runtime/: Cargo.toml
dao_chain/runtime/src/: lib.rs
process_json/: Cargo.toml  README.md  output.json
process_json/src/: main.rs
query_parser/: Cargo.toml
query_parser/src/: main.rs
todo_web/todo_backend/: .env  Cargo.toml  README.md  env_sample.txt
todo_web/todo_backend/migrations/: 20231122063807_init.down.sql  20231122063807_init.up.sql
todo_web/todo_backend/src/: main.rs  primitives.rs
todo_web/todo_backend/src/controller/: db_controller.rs  mod.rs
todo_web/todo_backend/src/model/: mod.rs  types.rs
todo_web/todo_backend/src/service/: db_service.rs  mod.rs
vending_machine/: Cargo.toml
vending_machine/src/: lib.rs
