[package]
name = "todo_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.1"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-async-std-native-tls", "chrono",] }
